--- a/SWOT/ConCars.html
+++ b/SWOT/ConCars.html
@@ -32,7 +32,7 @@
     <div class="large-6 cell features__content">
       <div class="header-content">
         <h1 style="color:white">Hi ich bin Amelie und das ist meine SWOT-Analyse.</h1>
-        <p style="color:white"> Dafür habe ich schnell eine von mir gemachte Website umgestellt.</p>
+        <p style="color:white"> Dafür habe ich eine von mir gemachte Website umgestellt.</p>
         <p><a href="#design" class="arrow scroll">Let's fetz!</a></p>
       </div>
     </div>
@@ -72,6 +72,7 @@
         <h2>Kurz zu mir</h2>
         <h4 style="margin-top: 3%;">Wer bin ich und wo komme ich her?</h4>
         <h5>Ich bin 23 Jahre alt und komme ursprünglich aus der Wein-Stadt Fellbach bei Stuttgart und wohne dort direkt am Weinberg. </h5>
+        <h5>Ich mag Wein.</h5>
         <h5>Fun Fact: Ich wollte eigentlich Tierärztin werden und habe ein Jahr lang als Praktikantin in dem Bereich gearbeitet.</h5>
       </div>
     </div>
@@ -88,7 +89,7 @@
         <hr class="left">
         <h4>Welche Stärken bringe ich mit?</h4>
         <h5> Ich habe ein Auge für Design und beherrrsche die Grundlagen in HTML und CSS. </h5>
-        <h5>Ich lerne außerdem schnell und begeistere mich für das Thema Interface Design. </h5>
+        <h5>Ich lerne außerdem schnell und begeistere mich für das Thema Interface Design und User Experience Design und könnte mir vorstellen mich darin zu vertiefen. </h5>
       </div>
     </div>
     <div class="large-6 cell features__content fill" style="background-image: url(img/4.png);"></div>
@@ -105,8 +106,8 @@
         <h2>Schwächen</h2>
         <hr class="right">
         <h4>An welchen Stellen haben ich noch Entwicklungsbedarf?</h4>
-        <h5>Sobald es in die Tiefen des Codings geht verliere ich (leider) schnell das Interesse und damit auch meine Motivation</h5>
-        <h5>Das gleiche Phänomen wiederholt sich beim auswendig lernen von Inhalten.</h5>
+        <h5>Sobald es in die Tiefen des Codings geht verliere ich (leider) schnell das Interesse und damit auch meine Motivation.</h5>
+        <h5>Außerdem habe ich bisher keine Erfahrung mit GitHub.</h5>
       </div>
     </div>
   </div>
@@ -121,7 +122,7 @@
         <h2>Chancen</h2>
         <hr class="left">
         <h4>Wo sehen ich Chancen in diesem Kurs für mich? Auf welche Themen hoffe ich? Welche Themen würden mich weiterbringen?</h4>
-        <h5>Ich hoffe die verschiedenen Design Regeln zu erlernen und mit einer Art Plan durch mein Interface Design Prozess gehen zu können am Ende des Semesters.</h5>
+        <h5>Ich hoffe verschiedenen Design Regeln zu erlernen und mit einer Art Plan durch mein Interface Design Prozess gehen zu können am Ende des Semesters.</h5>
       </div>
     </div>
     <div class="large-6 cell fill" style="background-image: url(img/2.jpg)"></div>
@@ -137,9 +138,9 @@
       <div class="content moved text-align__right">
         <h2>Risiken</h2>
         <hr class="right">
-        <h4>Welche Befürchtungen sehe ich für den Kurs bzw. für mich in dem Kurs (Fernlehre? Zu praxisferne Inhalte?)</h4>
+        <h4>Welche Befürchtungen sehe ich für den Kurs bzw. für mich in dem Kurs? </h4>
         <h5>Ich hoffe natrülich, dass ich trotz Fernlehre genug Motivation und Disziplin habe um die Aufgaben gut zu berarbeiten.</h5>
-        <h5>Und ich hoffe, dass es dieses Semester mehr im praktischen Bereich stattfinden wird.</h5>
+        <h5>Und ich hoffe, dass es dieses Semester vermehrt im praktischen Bereich stattfinden wird. </h5>
       </div>
     </div>
   </div>
