--- a/WALLET/wallet.html
+++ b/WALLET/wallet.html
@@ -230,11 +230,11 @@
 
       <h2>Prototype Iteration</h2>
 
-      <img src="img/1.jpg" alt="Final" width="100%" />
-      <img src="img/2.jpg" alt="Final" width="100%" />
-      <img src="img/3.jpg" alt="Final" width="100%" />
-      <img src="img/4.jpg" alt="Final" width="100%" />
-      <img src="img/5.jpg" alt="Final" width="100%" />
+      <img src="img/1.JPG" alt="Final" width="100%" />
+      <img src="img/2.JPG" alt="Final" width="100%" />
+      <img src="img/3.JPG" alt="Final" width="100%" />
+      <img src="img/4.JPG" alt="Final" width="100%" />
+      <img src="img/5.JPG" alt="Final" width="100%" />
 
 
     </div>
