--- a/WALLET/wallet.html
+++ b/WALLET/wallet.html
@@ -238,7 +238,7 @@
 
       <h3>Finales Feedback</h3>
 
-      <p class="interveiw">Darf ich mir das zum Muttertag wünschen?</p>
+      <p class="interview">Darf ich mir das zum Muttertag wünschen?</p>
     </div>
   </body>
 </html>
