--- a/GUI/gui.html
+++ b/GUI/gui.html
@@ -29,12 +29,17 @@
       <p>
         Spark AR Studio ist ein freies Tool, das von Facebook entwickelt wurde
         und seit August 2018 für jeden zugänglich ist. Man kann es sich ein
-        bisschen wie Photoshop vorstellen - mit Augmented Reality.
+        bisschen wie Photoshop vorstellen - mit Augmented Reality. Außerdem kann
+        Spark AR Studio damit Punkten, dass es kostenlos heruntergeladen werden
+        kann.
       </p>
       <p>
         Mit Spark ist es möglich, Augmented Reality Erlebnisse aller Art für
-        Instagram und Facebook zu erstellen. Hier sind ein paar Beispiele für
-        “Starthilfen” im Programm:
+        Instagram und Facebook zu erstellen. Vor allem der Einsatz in der
+        Story-Funktion kann gewissen Vorteil schaffen, denn gerade in der
+        heutigen Zeit spielen Stories in Sachen Aufmerksamkeit eine wichtige
+        Rolle und können geschickt eingesetzt, die eigene Marke pushen. Hier
+        sind ein paar Beispiele für “Starthilfen” im Programm:
       </p>
 
       <video src="img/video1.mov" controls>
@@ -61,6 +66,49 @@
         im Coden geeignet. Es gibt unzählige Tutorials, die viele Funktionen des
         Programms ausführlich erklären.
       </p>
+
+      <h3>Vorteile</h3>
+
+      <ul class="a">
+        <li>kostenlos</li>
+        <li>verständliches UI</li>
+        <li>für Sales & Marketing</li>
+        <li>Testen in Echtzeit möglich</li>
+        <li>Kreativität kaum Grenzen gesetzt</li>
+        <li>geräteübergreifendes Veröffentlichen</li>
+        <li>Content Creation</li>
+      </ul>
+
+      <h3>Nachteile</h3>
+
+      <ul class="a">
+        <li>wenige In-App Tutorials</li>
+        <li>
+          bei Facebook sind die Möglichkeiten beschränkter als bei Instagram
+        </li>
+        <li>kleinere Störungen während des Erstellungsprozesses möglich</li>
+        <li>momentan nur für Facebook und Instagram</li>
+      </ul>
+
+      <h3>Fun Fact</h3>
+
+      <p>
+        Die Deutsche Zentrale für Tourismus hat zum 100-jährigen Jubiläum der
+        Bauhausbewegung eine komplette
+        <a
+          href="https://demodern.de/projekte/bauhaus100-facefilter
+      "
+          target="_blank"
+          >Kampagne</a
+        >
+        gestartet
+      </p>
+
+      <video src="img/bauhaus.mov" controls>
+        Ihr Browser kann dieses Video nicht wiedergeben.<br />
+        Dieser Film zeigt eine Demonstration des video-Elements. Sie können ihn
+        unter <a href="#">Link-Addresse</a> abrufen.
+      </video>
 
       <h2>Fidelity</h2>
 
@@ -120,7 +168,7 @@
 
       <h2>Beispiele</h2>
 
-      <video class="videohoch" src="img/logo.MOV" controls >
+      <video class="videohoch" src="img/logo.MOV" controls>
         Ihr Browser kann dieses Video nicht wiedergeben.<br />
         Dieser Film zeigt eine Demonstration des video-Elements. Sie können ihn
         unter <a href="#">Link-Addresse</a> abrufen.
@@ -149,8 +197,6 @@
         publiziert werden. Allerdings sind das momentan auch die besten
         Plattformen, um AR-Effekte an die Öffentlichkeit zu bringen.
       </p>
-
-
     </div>
   </body>
 </html>
