--- a/GUI/gui.html
+++ b/GUI/gui.html
@@ -174,6 +174,18 @@
         unter <a href="#">Link-Addresse</a> abrufen.
       </video>
 
+      <video class="videohoch" src="img/logo-back1.mp4" controls>
+        Ihr Browser kann dieses Video nicht wiedergeben.<br />
+        Dieser Film zeigt eine Demonstration des video-Elements. Sie können ihn
+        unter <a href="#">Link-Addresse</a> abrufen.
+      </video>
+
+      <video class="videohoch" src="img/logo-back2.mp4" controls>
+        Ihr Browser kann dieses Video nicht wiedergeben.<br />
+        Dieser Film zeigt eine Demonstration des video-Elements. Sie können ihn
+        unter <a href="#">Link-Addresse</a> abrufen.
+      </video>
+
       <br />
       <br />
 
