--- a/GUI/gui.html
+++ b/GUI/gui.html
@@ -168,32 +168,34 @@
 
       <h2>Beispiele</h2>
 
-      <video class="videohoch" src="img/logo.MOV" controls>
-        Ihr Browser kann dieses Video nicht wiedergeben.<br />
-        Dieser Film zeigt eine Demonstration des video-Elements. Sie können ihn
-        unter <a href="#">Link-Addresse</a> abrufen.
-      </video>
+      <div class="videobox">
+        <video class="videohoch" src="img/logo-back1.mp4" controls>
+          Ihr Browser kann dieses Video nicht wiedergeben.<br />
+          Dieser Film zeigt eine Demonstration des video-Elements. Sie können
+          ihn unter <a href="#">Link-Addresse</a> abrufen.
+        </video>
 
-      <video class="videohoch" src="img/logo-back1.mp4" controls>
-        Ihr Browser kann dieses Video nicht wiedergeben.<br />
-        Dieser Film zeigt eine Demonstration des video-Elements. Sie können ihn
-        unter <a href="#">Link-Addresse</a> abrufen.
-      </video>
+        <video class="videohoch" src="img/logo.MOV" controls>
+          Ihr Browser kann dieses Video nicht wiedergeben.<br />
+          Dieser Film zeigt eine Demonstration des video-Elements. Sie können
+          ihn unter <a href="#">Link-Addresse</a> abrufen.
+        </video>
 
-      <video class="videohoch" src="img/logo-back2.mp4" controls>
-        Ihr Browser kann dieses Video nicht wiedergeben.<br />
-        Dieser Film zeigt eine Demonstration des video-Elements. Sie können ihn
-        unter <a href="#">Link-Addresse</a> abrufen.
-      </video>
-
+        <video class="videohoch" src="img/logo-back2.mp4" controls>
+          Ihr Browser kann dieses Video nicht wiedergeben.<br />
+          Dieser Film zeigt eine Demonstration des video-Elements. Sie können
+          ihn unter <a href="#">Link-Addresse</a> abrufen.
+        </video>
+      </div>
       <br />
       <br />
 
-      <a
+     <p style="text-align:center"> Für weitere Beispiele und Inspiration <a
         href="https://sparkar.facebook.com/ar-studio/inspiration/"
         target="_blank"
-        >Für weitere Beispiele und Inspiration hier klicken.</a
-      >
+        > hier klicken</a
+      >.
+      </p>
 
       <h2>Grenzen</h2>
 
