--- a/VUI/vui.html
+++ b/VUI/vui.html
@@ -30,15 +30,15 @@
       <p>
         Die Zahl der Pflegefälle in Deutschland steigt jedes Jahr weiter an.
         Viele Menschen fühlen sich vom einen auf den anderen Tag nicht mehr
-        imStande sich selbst zu versorgen. Doch die meisten wollen die eigenen
-        vier Wände fürs erste nicht verlassen. Das bringt viele Probleme mit
-        sich Pflege zuhause ist teuer und nicht jeder kann sich diesen Luxus
-        leisten - leider.
+        imstande sich selbst zu versorgen. Doch die meisten wollen die eigenen
+        vier Wände fürs Erste nicht verlassen. Das bringt viele Probleme mit
+        sich, denn Pflege zuhause ist teuer und nicht jeder kann sich diesen Luxus
+        leisten – leider.
       </p>
       <p>
-        Deshalb entwickle ich hier einen Sprachassistent, der speziell für
+        Deshalb entwickle ich hier einen Sprachassistenten, der speziell für
         Pflegebedürftige ausgerichtet ist. Notrufe werden durch sehr lautes
-        Sprechen bzw. Schreien oder beim sagen des Wortes “Hilfe” ausgelöst. Die
+        Sprechen bzw. Schreien oder beim Sagen des Wortes “Hilfe” ausgelöst. Die
         Sprachsteuerung und Funktionen müssen so primitiv und einfach aufgebaut
         sein, dass auch Senioren das Prinzip verstehen und das Gerät bedienen
         können.
@@ -53,27 +53,27 @@
       </p>
 
       <p>
-        Zilegruppe: Ältere, eingeschränkte Menschen, aber evtl. auch
+        Zielegruppe: Ältere, eingeschränkte Menschen, aber evtl. auch
         Pflegedienste und Krankenhäuser
       </p>
 
       <p>
-        Voice Assistant: Laura - weibliche Stimme, sanft, beruhigend (Name kann
+        Voice Assistent: Laura – weibliche Stimme, sanft, beruhigend (Name kann
         geändert werden vom Nutzer)
       </p>
 
       <h2>Funktionen</h2>
 
       <ul class="a">
-        <li>Home Assistant: Lichtsteuerung</li>
+        <li>Home Assistent: Lichtsteuerung</li>
         <li>
           Erinnern an: Geburtstage, Termine, Medikamenteneinnahme und was
-          mitgenommen werden muss, wenn man ausser Haus geht
+          mitgenommen werden muss, wenn man außer Haus geht
         </li>
         <li>
           Information: Fernsehprogramm, Veranstaltungen in der Stadt,
-          Medizinische Fragen oder Fragen zu Nachbehadlungen (bis zu einem
-          bestimmtn Grad - mit Arzt vereinbart)
+          medizinische Fragen oder Fragen zu Nachbehandlungen (bis zu einem
+          bestimmten Grad – mit Arzt vereinbart)
         </li>
         <li>
           Anrufe: Kontakte können angerufen werden, Notrufe wählen bei Erheben
@@ -81,15 +81,15 @@
         </li>
 
         <li>
-          Evtl. Dokumentieren des eigenen Wohlbefindens → für sich selbst und
+          Eventuell Dokumentieren des eigenen Wohlbefindens → für sich selbst und
           mit Einwilligung hat der Arzt Zugriff darauf
         </li>
       </ul>
 
-      <p>Bei schweren Pflegefall zusätzlich:</p>
+      <p>Bei schwerem Pflegefall zusätzlich:</p>
       <ul class="a">
         <li>
-          Home Assistant: Kontrolle des Fernsehers durch Sprachsteuerung und
+          Home Assistent: Kontrolle des Fernsehers durch Sprachsteuerung und
           Kontrolle von Herd, Kühlschrank und sonstige Gefahrenquellen
         </li>
       </ul>
