--- a/VUI/playground-artyom.html
+++ b/VUI/playground-artyom.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
-<!-- saved from url=(0066)https://niclas9898.github.io/IFD-SoSe20/VUI/playground-artyom.html -->
-<html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Playgroud Artyom</title>
-    <script src="./Playgroud Artyom_files/artyom.window.min.js"></script>
-    <script src="./Playgroud Artyom_files/playgroud-artyom-script.js"></script>
-</head><script type="text/javascript" id="webrtc-control"></script>
-<body cz-shortcut-listen="true">
+    <script src="js/libs/artyom.window.min.js"></script>
+    <script src="js/playgroud-artyom-script.js"></script>
+</head>
+<body>
     <p>This is a playground to test the web-based capabilities for a <b>Voice User Interface</b> with artyom.</p>
 
     <button id="btn">Allow Voice Synthesis</button>
@@ -21,5 +21,5 @@
         Jarvis.say("Yes?");
         }, false);
     </script>
-
-</body></html>
+</body>
+</html>
