--- a/VUI/vui.1.html
+++ b/VUI/vui.1.html
@@ -20,7 +20,7 @@
 
     <script src="js/libs/artyom.window.min.js"></script>
     <script src="js/playgroud-artyom-script.js"></script>
-    <script src="artyom.window.min.js"></script>
+    <script src="js/artyom.window.min.js"></script>
   </head>
 
   <body>
@@ -31,9 +31,23 @@
         This is a playground to test the web-based capabilities for a
         <b>Voice User Interface</b> with artyom.
       </p>
+
       <div class="centerbtn">
-        <button class="button">Erlaube Voice Synthesis</button>
+        <button class="button" id="btn">Erlaube Voice Synthesis</button>
       </div>
     </div>
+    <script>
+      var Jarvis = new Artyom();
+
+      // Needed user interaction at least once in the website to make
+      // it work automatically without user interaction later... thanks google .i.
+      document.getElementById("btn").addEventListener(
+        "click",
+        function() {
+          Jarvis.say("Yes?");
+        },
+        false
+      );
+    </script>
   </body>
 </html>
