--- a/VUI/vui.1.html
+++ b/VUI/vui.1.html
@@ -44,7 +44,7 @@
       document.getElementById("btn").addEventListener(
         "click",
         function() {
-          Jarvis.say("Yes?");
+          Jarvis.say("It's on.");
         },
         false
       );
