--- a/VUI/vui.1.html
+++ b/VUI/vui.1.html
@@ -36,7 +36,27 @@
         <button class="button" id="btn">Erlaube Voice Synthesis</button>
       </div>
     </div>
-    <script>
+
+<h2> Funktionen</h2>
+
+
+<p>Hallo, Guten Morgen, Gute Nacht, Hallo *</p>
+
+<p>Wie lautet dein Name?</p>
+
+<p>Wer hat heute Geburtstag?</p>
+
+<p>Was gibt es Neues?</p>
+   
+<p>Richte dem Diakoniediesnt folgendes aus: Meine Milch ist ausgelaufen, ich brauche eine Neue.</p>
+
+<p>Welche Tabletten muss ich nehmen?, Medikamente, Medikamenteneinnahme</p>
+
+<p>Rufe * an.</p>
+
+<p>Hilfe, Notfall, Ahhh! (Schrei)</p>
+
+   <script>
       var Jarvis = new Artyom();
 
       // Needed user interaction at least once in the website to make
