--- a/VUI/vui.1.html
+++ b/VUI/vui.1.html
@@ -33,12 +33,11 @@
       </p>
 
       <div class="centerbtn">
-        <button class="button" id="btn">Erlaube Voice Synthesis</button>
+        <button class="button" id="btn">Allow Voice Synthesis</button>
       </div>
-    </div>
+   
 
 <h2> Funktionen</h2>
-
 
 <p>Hallo, Guten Morgen, Gute Nacht, Hallo *</p>
 
@@ -55,6 +54,8 @@
 <p>Rufe * an.</p>
 
 <p>Hilfe, Notfall, Ahhh! (Schrei)</p>
+
+</div>
 
    <script>
       var Jarvis = new Artyom();
