--- a/VUI/vui.1.html
+++ b/VUI/vui.1.html
@@ -37,7 +37,7 @@
       </div>
    
 
-<h2> Funktionen</h2>
+<h2 style="text-align: left"> Funktionen</h2>
 
 <p>Hallo, Guten Morgen, Gute Nacht, Hallo *</p>
 
