--- a/VUI/vui.1.html
+++ b/VUI/vui.1.html
@@ -47,7 +47,7 @@
 
 <p>Was gibt es Neues?</p>
    
-<p>Richte dem Diakoniedienst folgendes aus: Meine Milch ist ausgelaufen, ich brauche eine Neue.</p>
+<p>Richte dem Diakoniedienst folgendes aus: * .</p>
 
 <p>Welche Tabletten muss ich nehmen?, Medikamente, Medikamenteneinnahme</p>
 
