--- a/VUI/vui.1.html
+++ b/VUI/vui.1.html
@@ -65,7 +65,7 @@
       document.getElementById("btn").addEventListener(
         "click",
         function() {
-          Jarvis.say("It's on.");
+          Jarvis.say("How you doin?");
         },
         false
       );
