--- a/VUI/vui.1.html
+++ b/VUI/vui.1.html
@@ -49,11 +49,11 @@
    
 <p>Richte dem Diakoniedienst folgendes aus: * .</p>
 
-<p>Welche Tabletten muss ich nehmen?, Medikamente, Medikamenteneinnahme</p>
+<p>Welche Tabletten muss ich nehmen? (Oder Medikamente, Medikamenteneinnahme)</p>
 
 <p>Rufe * an.</p>
 
-<p>Hilfe, Notfall, Ahhh! (Schrei)</p>
+<p>Hilfe, Notfall</p>
 
 </div>
 
