--- a/VUI/vui.2.html
+++ b/VUI/vui.2.html
@@ -6,7 +6,7 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>VUI - Technischer Durchstrich</title>
+    <title>VUI - Screencast</title>
     <link rel="stylesheet" href="main.css" />
 
     <link rel="stylesheet" href="https://use.typekit.net/kid2ffs.css" />
@@ -17,43 +17,15 @@
       rel="stylesheet"
       type="text/css"
     />
-
-    <script src="js/libs/artyom.window.min.js"></script>
-    <script src="js/playgroud-artyom-script.js"></script>
-    <script src="js/artyom.window.min.js"></script>
   </head>
 
   <body>
     <div class="text">
-      <h1>VUI - Technischer Durchstrich</h1>
+      <h1>VUI - Screencast</h1>
 
-      <p style="text-align: center;">
-        This is a playground to test the web-based capabilities for a
-        <b>Voice User Interface</b> with artyom.
-      </p>
-
-      <div class="centerbtn">
-        <button class="button" id="btn">Allow Voice Synthesis</button>
-      </div>
-   
-
-<h2 style="text-align: left"> Funktionen</h2>
-
-<p>Hallo, Guten Morgen, Gute Nacht, Hallo *</p>
-
-<p>Wie lautet dein Name?</p>
-
-<p>Wer hat heute Geburtstag?</p>
-
-<p>Was gibt es Neues?</p>
-   
-<p>Richte dem Diakoniedienst folgendes aus: * .</p>
-
-<p>Welche Tabletten muss ich nehmen? (Oder Medikamente, Medikamenteneinnahme)</p>
-
-<p>Rufe * an.</p>
-
-<p>Hilfe, Notfall</p>
+<h2 style="text-align: left"> Screencast</h2>
+<video src="img/Screencast.mp4" controls>
+</video>
 
 </div>
 
