--- a/VR/vr.1.html
+++ b/VR/vr.1.html
@@ -31,13 +31,13 @@
 
       <div class="textdiv">
         <p>
-          Bei einem 360 Grad Video besteht immer die gefahr etwas im Bild zu
-          verpassen, weil man gerade nicht hinsieht. Bei proffessionellen
+          Bei einem 360 Grad Video besteht immer die Gefahr etwas im Bild zu
+          verpassen, weil man gerade nicht hinsieht. Bei professionellen
           Werbevideos gibt es in der Story meist einen visuellen roten Faden,
           der den Zuschauer durch das Video führt.
         </p>
         <p>
-          In dem Fall einer Gesprächsrunde, ist dies alerdings nicht der Fall
+          In dem Fall einer Gesprächsrunde ist dies allerdings nicht der Fall
           und der Zuschauer ist oft etwas orientierungslos. Deshalb habe ich mir
           überlegt, wie man den Zuschauer auch hier an der Hand nehmen kann.
         </p>
