--- a/VR/vr.2.html
+++ b/VR/vr.2.html
@@ -37,8 +37,7 @@
           seines Kopfes mit der Anwendung interagieren können.
         </p>
         <p>
-          Auf Instagram sieht man fast täglich neue AR-Filter bzw. AR-Spiele und
-          ich ließ mich hier von dem Spiel "Who is more likely to..." oder auf deutsch "Wer würde eher..."
+          Auf Instagram sieht man fast täglich neue AR-Filter bzw. AR-Spiele. Ich ließ mich hier von dem Spiel "Who is more likely to..." (auf deutsch "Wer würde eher...")
           inspirieren.
         </p>
       </div>
@@ -56,17 +55,22 @@
         <img src="img/2.2.png" alt="Storyboard" width="30%" />
       </div>
 
-      <p>
+      <p style="text-align:left">
         Danach habe ich auf den Face-Tracker eine Head-Rotation gelegt und die
-        vier verschiedenen Fälle damit verbunden: beide Spieler rechts, beide
-        Spieler links und jeweils einer rechts einer links.
+        vier verschiedenen Fälle damit verbunden: 
+        
+        <ul>
+          <li>beide Spieler rechts</li>
+          <li>beide Spieler links</li>
+          <li>rechts/links</li>
+          <li>links/rechts</li>
+        </ul> 
       </p>
-      <p>
+      <p style="text-align:left">
         Als nächste Schritt habe ich den grünen Kreis damit verbunden, wenn
         beide den Kopf in die gleiche Richtung drehen sowie den roten Kreis,
         wenn die Spieler in unterschiedliche Richtungen schauen.
-      </p>
-      <p>
+      
         Beim Testen ist mir aufgefallen, dass man den weißen Kreis unsichtbar
         machen muss, sobald einer dieser Events ausgelöst wird.
       </p>
