--- a/GUI/gui.1.html
+++ b/GUI/gui.1.html
@@ -54,9 +54,9 @@
 
         <h2>Konzept Adobe XD</h2>
 
-        <img class="img" src="img/Dashboard.png" alt="Spark Logo" width="25%" />
-        <img class="img" src="img/Stückzahlen1.png" alt="Spark Logo" width="25%" />
-        <img class="img" src="img/Stückzahlen2.png" alt="Spark Logo" width="25%" />
+        <img class="img" src="img/Dashboard.png" alt=" " width="25%" />
+        <img class="img" src="img/Stuckzahlen1.png" alt=" " width="25%" />
+        <img class="img" src="img/Stuckzahlen2.png" alt=" " width="25%" />
 
         <h2>Prototyp Adobe XD</h2>
 
