--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
                                           <span>#12</span>
                                           <h5>Arduino</h5>
                                           <p>Corona Distance Warning System</p>
-                                          <a href=""> <div class="btn-buy">
+                                          <a href="ARDUINO/arduino.html"> <div class="btn-buy">
                                         <span>CHECK IT OUT</span>
                                         <i class="fas fa-arrow-right"></i>      
                                       </div> </a>     
