--- a/ARDUINO/arduino.html
+++ b/ARDUINO/arduino.html
@@ -22,7 +22,6 @@
   <body>
     <div class="text">
       <h1>ARDUINO - CORONA DISTANCE WARNING SYSTEM</h1>
-
       <h2>Grobkonzept</h2>
 
       <p>
@@ -56,8 +55,8 @@
       <p>
         Im nächsten Schritt habe ich mich mit dem Code auseinandergesetzt. Ich
         habe zunächst Zentimeter (cm) und die Entfernungsschwelle als Variablen
-        definiert. Die Entfernungsschwelle habe ich hier auf 150 cm gesetzt
-        (1,5 m Mindestabstand).
+        definiert. Die Entfernungsschwelle habe ich hier auf 150 cm gesetzt (1,5
+        m Mindestabstand).
       </p>
 
       <p>
