--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <div class="ueberschrift">
           <h1 style="padding-bottom:15px">AMELIE BACHMANN</h1>
           <h2>Aufgabensammlung Interface Design</h2>
-        <div class="centerimg">
+          <div class="centerimg">
           <img src="img/me.png" alt="Amelie" height="100%" style="height: 179px;" />
         </div>
         </div>
@@ -31,7 +31,7 @@
                   <div class="text-display">
                     <img src="img/1.png" alt="">
                     
-                    <span>#1</span>
+                    <span class="lala">#1</span>
                     <h5>SWOT</h5>
                     <p>SWOT Analyse Interface Design</p>
                     <a href="SWOT/ConCars.html"> <div class="btn-buy">
@@ -45,7 +45,7 @@
                 <div class="card card--variety2">
                   <div class="text-display">
                     <img src="img/2.png" alt="" />
-                    <span>#2</span>
+                    <span class="lala">#2</span>
                     <h5>Wallet</h5>
                     <p>The Wallet Project (Design Thinking)</p>
                     <a href="WALLET/wallet.html"> <div class="btn-buy">
@@ -59,7 +59,7 @@
                 <div class="card card--variety1">
                   <div class="text-display">
                     <img src="img/3.png" alt="" />
-                    <span>#3</span>
+                    <span class="lala">#3</span>
                     <h5>Spark AR</h5>
                     <p>Vorstellung eines GUI</p>
                     <a href="GUI/gui.html"> <div class="btn-buy">
@@ -78,7 +78,7 @@
                     <div class="card card--variety2">
                             <div class="text-display">
                               <img src="img/4.png" alt="" />
-                              <span>#4</span>
+                              <span class="lala">#4</span>
                               <h5>GUI LoFi</h5>
                               <p>Konzeption und Prototyping eines GUI</p>
                               <a href="GUI/gui.1.html"> <div class="btn-buy">
@@ -92,7 +92,7 @@
                           <div class="card card--variety1">
                             <div class="text-display">
                               <img src="img/5.png" alt="" />
-                              <span>#5</span>
+                              <span class="lala">#5</span>
                               <h5>GUI HiFi</h5>
                               <p>Erstellen eines HiFi Prototyps</p>
                               <a href="https://xd.adobe.com/view/f4574ff8-d9e2-45af-4b50-f9bb2c8ddad0-8266/screen/0319d951-258f-4333-b016-2f3e29a8f98c/Login"> <div class="btn-buy">
@@ -107,7 +107,7 @@
                           <div class="card card--variety2">
                                 <div class="text-display">
                                   <img src="img/6.png" alt="" />
-                                  <span>#6</span>
+                                  <span class="lala">#6</span>
                                   <h5>Konzept</h5>
                                   <p>Grobkonzept Voice User Interface</p>
                                   <a href="VUI/vui.html"> <div class="btn-buy">
@@ -123,7 +123,7 @@
                         <div class="card">
                           <div class="text-display">
                             <img src="img/7.png" alt="">
-                            <span>#7</span>
+                            <span class="lala">#7</span>
                             <h5>Prototyp</h5>
                             <p>Erstellen eines VUI Prototypen</p>
                             <a href="VUI/vui.1.html"> <div class="btn-buy">
@@ -137,7 +137,7 @@
                         <div class="card card--variety2">
                           <div class="text-display">
                             <img src="img/8.png" alt="" />
-                            <span>#8</span>
+                            <span class="lala">#8</span>
                             <h5>Video</h5>
                             <p>Screencast von Prototyp</p>
                                     <a href="VUI/vui.2.html"> <div class="btn-buy">
@@ -151,7 +151,7 @@
                         <div class="card card--variety1">
                           <div class="text-display">
                             <img src="img/9.png" alt="" />
-                            <span>#9</span>
+                            <span class="lala">#9</span>
                             <h5>Cardboard</h5>
                             <p>Basteln eines Google Cardboards</p>
                             <a href="VR/vr.html"> <div class="btn-buy">
@@ -169,7 +169,7 @@
                             <div class="card card--variety2">
                                     <div class="text-display">
                                       <img src="img/10.png" alt="" />
-                                      <span>#10</span>
+                                      <span class="lala">#10</span>
                                       <h5>Prototyp</h5>
                                       <p>Erstellen eines VR Prototypen für 360 Grad Video</p>
                                       <a href="VR/vr.1.html"> <div class="btn-buy">
@@ -183,7 +183,7 @@
                                   <div class="card card--variety1">
                                     <div class="text-display">
                                       <img src="img/11.png" alt="" />
-                                      <span>#11</span>
+                                      <span class="lala">#11</span>
                                       <h5>AR Game</h5>
                                       <p>Erstellen einer AR Anwednung auf Instagram</p>
                                       <a href="VR/vr.2.html"> <div class="btn-buy">
@@ -197,7 +197,7 @@
                                   <div class="card card--variety2">
                                         <div class="text-display">
                                           <img src="img/12.png" alt="" />
-                                          <span>#12</span>
+                                          <span class="lala">#12</span>
                                           <h5>Arduino</h5>
                                           <p>Corona Distance Warning System</p>
                                           <a href="ARDUINO/arduino.html"> <div class="btn-buy">
