--- a/VR/vr.1.html
+++ b/VR/vr.1.html
@@ -48,11 +48,11 @@
         <img src="img/1.1.JPG" alt="Storyboard" width="100%" />
       </div>
 
-      <h2>Video Prottyp</h2>
+      <h2>Video Prototyp</h2>
       <div class="pics">
         <iframe
-          width="560"
-          height="315"
+          width="1120"
+          height="630"
           src="https://www.youtube.com/embed/z_OTQqOv2uE"
           frameborder="0"
           allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
