--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                               <img src="img/5.png" alt="" />
                               <span class="lala">#5</span>
                               <h5>GUI HiFi</h5>
-                              <p>Erstellen eines HiFi Prototyps</p>
+                              <p>Erstellen eines HiFi Prototypen</p>
                               <a href="https://xd.adobe.com/view/f4574ff8-d9e2-45af-4b50-f9bb2c8ddad0-8266/screen/0319d951-258f-4333-b016-2f3e29a8f98c/Login"> <div class="btn-buy">
                                     <span>CHECK IT OUT</span>
                                     <i class="fas fa-arrow-right"></i>      
