--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
                                     <div class="text-display">
                                       <img src="img/13.png" alt="" />
                                       <span class="lala">#10</span>
-                                      <h5>Future Interface</h5>
+                                      <h5>Future</h5>
                                       <p>Beispiele von Futuristic Interfaces</p>
                                       <a href="FI/fi.html"> <div class="btn-buy">
                                             <span>CHECK IT OUT</span>
