--- a/WRAPUP/index.html
+++ b/WRAPUP/index.html
@@ -24,15 +24,49 @@
       <h1>
         Endaufgabe
       </h1>
-      <h2>
+      <h4>
         Evaluieren und Verbessern Sie den AR Prototypen aus diesem Semester
-      </h2>
-
-
+      </h4>
       
+      <h3>Wie würde die VR-Anwendung genutzt werden?</h3>
+      <p>
+        Nur auf Instagram bzw. eventuell Facebook, da die AR-Anwendung nur dort
+        benutzt werden kann.
+      </p>
+
+      <div class="videobox">
+        <video class="videohoch"src="img/3.MOV" controls></video>
+      </div>
+
+      <h3>
+        Wie würde ein Nutzer/Kunde mit diesem Produkt in Kontakt kommen und auch
+        damit interagieren?
+      </h3>
+      <p>
+        Zuallererst auf meinem Instagram Kanal, da der Filter in auf meinem
+        Account gepostet wird. Sobald jemand den Filter in seiner Story nutzt,
+        wird er verlinkt und andere Nutzer können direkt darauf zugreifen. Je
+        nach Interaktionsrate, kann es aber auch passieren, dass der Filter
+        unter der “Effekte durchstöbern” angezeigt wird. Dort sind die diese in
+        verschiedene Kategorien eingeteilt, wie man hier im Video sehen kann.
+      </p>
+
+      <div class="videobox">
+        <video class="videohoch"src="img/1.mp4" controls></video>
+      </div>
+
       <h2>
         Customer Journey Map
       </h2>
+      <h3>
+        Erstellen Sie eine Customer Journey Map, um die Touchpoints zwischen dem
+        Produkt (Prototypen) und dem Nutzer zu visualisieren.
+      </h3>
+
+      <img src="img/1.png" alt="Storyboard" width="100%" />
+
+
+  
 
       <h2>Empirischer Nutzertest</h2>
 
